rokovi/fugot/ppj_jun_1_2020/1/parser.output
Grammar

    0 $accept: program $end

    1 program: program naredba '\n'
    2        | naredba '\n'

    3 naredba: ID_T '=' izraz
    4        | izraz
    5        | izraz LT_T izraz
    6        | izraz GT_T izraz
    7        | izraz LTE_T izraz
    8        | izraz GTE_T izraz
    9        | izraz EQ_T izraz
   10        | izraz NEQ_T izraz
   11        | IDL_T '=' lista
   12        | lista
   13        | RAD_T '(' izraz ')'
   14        | RAD_T '(' lista ')'

   15 izraz: izraz '+' izraz
   16      | izraz '-' izraz
   17      | '(' izraz ')'
   18      | BROJ_T '.' BROJ_T '.' BROJ_T
   19      | ID_T
   20      | BROJ_T '*' izraz
   21      | izraz '*' BROJ_T
   22      | izraz '/' BROJ_T
   23      | MIN_T '(' lista ')'
   24      | MAX_T '(' lista ')'
   25      | PROSEK_T '(' lista ')'
   26      | lista '[' BROJ_T ']'

   27 lista: '[' lista_el ']'
   28      | IDL_T

   29 lista_el: lista_el ',' izraz
   30         | izraz


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 1 2
'(' (40) 13 14 17 23 24 25
')' (41) 13 14 17 23 24 25
'*' (42) 20 21
'+' (43) 15
',' (44) 29
'-' (45) 16
'.' (46) 18
'/' (47) 22
'=' (61) 3 11
'[' (91) 26 27
']' (93) 26 27
error (256)
LT_T (258) 5
GT_T (259) 6
LTE_T (260) 7
GTE_T (261) 8
EQ_T (262) 9
NEQ_T (263) 10
MAX_T (264) 24
MIN_T (265) 23
PROSEK_T (266) 25
RAD_T (267) 13 14
ID_T (268) 3 19
IDL_T (269) 11 28
BROJ_T (270) 18 20 21 22 26


Nonterminals, with rules where they appear

$accept (28)
    on left: 0
program (29)
    on left: 1 2, on right: 0 1
naredba (30)
    on left: 3 4 5 6 7 8 9 10 11 12 13 14, on right: 1 2
izraz (31)
    on left: 15 16 17 18 19 20 21 22 23 24 25 26, on right: 3 4 5 6
    7 8 9 10 13 15 16 17 20 21 22 29 30
lista (32)
    on left: 27 28, on right: 11 12 14 23 24 25 26
lista_el (33)
    on left: 29 30, on right: 27 29


State 0

    0 $accept: . program $end

    MAX_T     shift, and go to state 1
    MIN_T     shift, and go to state 2
    PROSEK_T  shift, and go to state 3
    RAD_T     shift, and go to state 4
    ID_T      shift, and go to state 5
    IDL_T     shift, and go to state 6
    BROJ_T    shift, and go to state 7
    '('       shift, and go to state 8
    '['       shift, and go to state 9

    program  go to state 10
    naredba  go to state 11
    izraz    go to state 12
    lista    go to state 13


State 1

   24 izraz: MAX_T . '(' lista ')'

    '('  shift, and go to state 14


State 2

   23 izraz: MIN_T . '(' lista ')'

    '('  shift, and go to state 15


State 3

   25 izraz: PROSEK_T . '(' lista ')'

    '('  shift, and go to state 16


State 4

   13 naredba: RAD_T . '(' izraz ')'
   14        | RAD_T . '(' lista ')'

    '('  shift, and go to state 17


State 5

    3 naredba: ID_T . '=' izraz
   19 izraz: ID_T .

    '='  shift, and go to state 18

    $default  reduce using rule 19 (izraz)


State 6

   11 naredba: IDL_T . '=' lista
   28 lista: IDL_T .

    '='  shift, and go to state 19

    $default  reduce using rule 28 (lista)


State 7

   18 izraz: BROJ_T . '.' BROJ_T '.' BROJ_T
   20      | BROJ_T . '*' izraz

    '*'  shift, and go to state 20
    '.'  shift, and go to state 21


State 8

   17 izraz: '(' . izraz ')'

    MAX_T     shift, and go to state 1
    MIN_T     shift, and go to state 2
    PROSEK_T  shift, and go to state 3
    ID_T      shift, and go to state 22
    IDL_T     shift, and go to state 23
    BROJ_T    shift, and go to state 7
    '('       shift, and go to state 8
    '['       shift, and go to state 9

    izraz  go to state 24
    lista  go to state 25


State 9

   27 lista: '[' . lista_el ']'

    MAX_T     shift, and go to state 1
    MIN_T     shift, and go to state 2
    PROSEK_T  shift, and go to state 3
    ID_T      shift, and go to state 22
    IDL_T     shift, and go to state 23
    BROJ_T    shift, and go to state 7
    '('       shift, and go to state 8
    '['       shift, and go to state 9

    izraz     go to state 26
    lista     go to state 25
    lista_el  go to state 27


State 10

    0 $accept: program . $end
    1 program: program . naredba '\n'

    $end      shift, and go to state 28
    MAX_T     shift, and go to state 1
    MIN_T     shift, and go to state 2
    PROSEK_T  shift, and go to state 3
    RAD_T     shift, and go to state 4
    ID_T      shift, and go to state 5
    IDL_T     shift, and go to state 6
    BROJ_T    shift, and go to state 7
    '('       shift, and go to state 8
    '['       shift, and go to state 9

    naredba  go to state 29
    izraz    go to state 12
    lista    go to state 13


State 11

    2 program: naredba . '\n'

    '\n'  shift, and go to state 30


State 12

    4 naredba: izraz .
    5        | izraz . LT_T izraz
    6        | izraz . GT_T izraz
    7        | izraz . LTE_T izraz
    8        | izraz . GTE_T izraz
    9        | izraz . EQ_T izraz
   10        | izraz . NEQ_T izraz
   15 izraz: izraz . '+' izraz
   16      | izraz . '-' izraz
   21      | izraz . '*' BROJ_T
   22      | izraz . '/' BROJ_T

    LT_T   shift, and go to state 31
    GT_T   shift, and go to state 32
    LTE_T  shift, and go to state 33
    GTE_T  shift, and go to state 34
    EQ_T   shift, and go to state 35
    NEQ_T  shift, and go to state 36
    '+'    shift, and go to state 37
    '-'    shift, and go to state 38
    '*'    shift, and go to state 39
    '/'    shift, and go to state 40

    $default  reduce using rule 4 (naredba)


State 13

   12 naredba: lista .
   26 izraz: lista . '[' BROJ_T ']'

    '['  shift, and go to state 41

    $default  reduce using rule 12 (naredba)


State 14

   24 izraz: MAX_T '(' . lista ')'

    IDL_T  shift, and go to state 23
    '['    shift, and go to state 9

    lista  go to state 42


State 15

   23 izraz: MIN_T '(' . lista ')'

    IDL_T  shift, and go to state 23
    '['    shift, and go to state 9

    lista  go to state 43


State 16

   25 izraz: PROSEK_T '(' . lista ')'

    IDL_T  shift, and go to state 23
    '['    shift, and go to state 9

    lista  go to state 44


State 17

   13 naredba: RAD_T '(' . izraz ')'
   14        | RAD_T '(' . lista ')'

    MAX_T     shift, and go to state 1
    MIN_T     shift, and go to state 2
    PROSEK_T  shift, and go to state 3
    ID_T      shift, and go to state 22
    IDL_T     shift, and go to state 23
    BROJ_T    shift, and go to state 7
    '('       shift, and go to state 8
    '['       shift, and go to state 9

    izraz  go to state 45
    lista  go to state 46


State 18

    3 naredba: ID_T '=' . izraz

    MAX_T     shift, and go to state 1
    MIN_T     shift, and go to state 2
    PROSEK_T  shift, and go to state 3
    ID_T      shift, and go to state 22
    IDL_T     shift, and go to state 23
    BROJ_T    shift, and go to state 7
    '('       shift, and go to state 8
    '['       shift, and go to state 9

    izraz  go to state 47
    lista  go to state 25


State 19

   11 naredba: IDL_T '=' . lista

    IDL_T  shift, and go to state 23
    '['    shift, and go to state 9

    lista  go to state 48


State 20

   20 izraz: BROJ_T '*' . izraz

    MAX_T     shift, and go to state 1
    MIN_T     shift, and go to state 2
    PROSEK_T  shift, and go to state 3
    ID_T      shift, and go to state 22
    IDL_T     shift, and go to state 23
    BROJ_T    shift, and go to state 7
    '('       shift, and go to state 8
    '['       shift, and go to state 9

    izraz  go to state 49
    lista  go to state 25


State 21

   18 izraz: BROJ_T '.' . BROJ_T '.' BROJ_T

    BROJ_T  shift, and go to state 50


State 22

   19 izraz: ID_T .

    $default  reduce using rule 19 (izraz)


State 23

   28 lista: IDL_T .

    $default  reduce using rule 28 (lista)


State 24

   15 izraz: izraz . '+' izraz
   16      | izraz . '-' izraz
   17      | '(' izraz . ')'
   21      | izraz . '*' BROJ_T
   22      | izraz . '/' BROJ_T

    '+'  shift, and go to state 37
    '-'  shift, and go to state 38
    '*'  shift, and go to state 39
    '/'  shift, and go to state 40
    ')'  shift, and go to state 51


State 25

   26 izraz: lista . '[' BROJ_T ']'

    '['  shift, and go to state 41


State 26

   15 izraz: izraz . '+' izraz
   16      | izraz . '-' izraz
   21      | izraz . '*' BROJ_T
   22      | izraz . '/' BROJ_T
   30 lista_el: izraz .

    '+'  shift, and go to state 37
    '-'  shift, and go to state 38
    '*'  shift, and go to state 39
    '/'  shift, and go to state 40

    $default  reduce using rule 30 (lista_el)


State 27

   27 lista: '[' lista_el . ']'
   29 lista_el: lista_el . ',' izraz

    ']'  shift, and go to state 52
    ','  shift, and go to state 53


State 28

    0 $accept: program $end .

    $default  accept


State 29

    1 program: program naredba . '\n'

    '\n'  shift, and go to state 54


State 30

    2 program: naredba '\n' .

    $default  reduce using rule 2 (program)


State 31

    5 naredba: izraz LT_T . izraz

    MAX_T     shift, and go to state 1
    MIN_T     shift, and go to state 2
    PROSEK_T  shift, and go to state 3
    ID_T      shift, and go to state 22
    IDL_T     shift, and go to state 23
    BROJ_T    shift, and go to state 7
    '('       shift, and go to state 8
    '['       shift, and go to state 9

    izraz  go to state 55
    lista  go to state 25


State 32

    6 naredba: izraz GT_T . izraz

    MAX_T     shift, and go to state 1
    MIN_T     shift, and go to state 2
    PROSEK_T  shift, and go to state 3
    ID_T      shift, and go to state 22
    IDL_T     shift, and go to state 23
    BROJ_T    shift, and go to state 7
    '('       shift, and go to state 8
    '['       shift, and go to state 9

    izraz  go to state 56
    lista  go to state 25


State 33

    7 naredba: izraz LTE_T . izraz

    MAX_T     shift, and go to state 1
    MIN_T     shift, and go to state 2
    PROSEK_T  shift, and go to state 3
    ID_T      shift, and go to state 22
    IDL_T     shift, and go to state 23
    BROJ_T    shift, and go to state 7
    '('       shift, and go to state 8
    '['       shift, and go to state 9

    izraz  go to state 57
    lista  go to state 25


State 34

    8 naredba: izraz GTE_T . izraz

    MAX_T     shift, and go to state 1
    MIN_T     shift, and go to state 2
    PROSEK_T  shift, and go to state 3
    ID_T      shift, and go to state 22
    IDL_T     shift, and go to state 23
    BROJ_T    shift, and go to state 7
    '('       shift, and go to state 8
    '['       shift, and go to state 9

    izraz  go to state 58
    lista  go to state 25


State 35

    9 naredba: izraz EQ_T . izraz

    MAX_T     shift, and go to state 1
    MIN_T     shift, and go to state 2
    PROSEK_T  shift, and go to state 3
    ID_T      shift, and go to state 22
    IDL_T     shift, and go to state 23
    BROJ_T    shift, and go to state 7
    '('       shift, and go to state 8
    '['       shift, and go to state 9

    izraz  go to state 59
    lista  go to state 25


State 36

   10 naredba: izraz NEQ_T . izraz

    MAX_T     shift, and go to state 1
    MIN_T     shift, and go to state 2
    PROSEK_T  shift, and go to state 3
    ID_T      shift, and go to state 22
    IDL_T     shift, and go to state 23
    BROJ_T    shift, and go to state 7
    '('       shift, and go to state 8
    '['       shift, and go to state 9

    izraz  go to state 60
    lista  go to state 25


State 37

   15 izraz: izraz '+' . izraz

    MAX_T     shift, and go to state 1
    MIN_T     shift, and go to state 2
    PROSEK_T  shift, and go to state 3
    ID_T      shift, and go to state 22
    IDL_T     shift, and go to state 23
    BROJ_T    shift, and go to state 7
    '('       shift, and go to state 8
    '['       shift, and go to state 9

    izraz  go to state 61
    lista  go to state 25


State 38

   16 izraz: izraz '-' . izraz

    MAX_T     shift, and go to state 1
    MIN_T     shift, and go to state 2
    PROSEK_T  shift, and go to state 3
    ID_T      shift, and go to state 22
    IDL_T     shift, and go to state 23
    BROJ_T    shift, and go to state 7
    '('       shift, and go to state 8
    '['       shift, and go to state 9

    izraz  go to state 62
    lista  go to state 25


State 39

   21 izraz: izraz '*' . BROJ_T

    BROJ_T  shift, and go to state 63


State 40

   22 izraz: izraz '/' . BROJ_T

    BROJ_T  shift, and go to state 64


State 41

   26 izraz: lista '[' . BROJ_T ']'

    BROJ_T  shift, and go to state 65


State 42

   24 izraz: MAX_T '(' lista . ')'

    ')'  shift, and go to state 66


State 43

   23 izraz: MIN_T '(' lista . ')'

    ')'  shift, and go to state 67


State 44

   25 izraz: PROSEK_T '(' lista . ')'

    ')'  shift, and go to state 68


State 45

   13 naredba: RAD_T '(' izraz . ')'
   15 izraz: izraz . '+' izraz
   16      | izraz . '-' izraz
   21      | izraz . '*' BROJ_T
   22      | izraz . '/' BROJ_T

    '+'  shift, and go to state 37
    '-'  shift, and go to state 38
    '*'  shift, and go to state 39
    '/'  shift, and go to state 40
    ')'  shift, and go to state 69


State 46

   14 naredba: RAD_T '(' lista . ')'
   26 izraz: lista . '[' BROJ_T ']'

    ')'  shift, and go to state 70
    '['  shift, and go to state 41


State 47

    3 naredba: ID_T '=' izraz .
   15 izraz: izraz . '+' izraz
   16      | izraz . '-' izraz
   21      | izraz . '*' BROJ_T
   22      | izraz . '/' BROJ_T

    '+'  shift, and go to state 37
    '-'  shift, and go to state 38
    '*'  shift, and go to state 39
    '/'  shift, and go to state 40

    $default  reduce using rule 3 (naredba)


State 48

   11 naredba: IDL_T '=' lista .

    $default  reduce using rule 11 (naredba)


State 49

   15 izraz: izraz . '+' izraz
   16      | izraz . '-' izraz
   20      | BROJ_T '*' izraz .
   21      | izraz . '*' BROJ_T
   22      | izraz . '/' BROJ_T

    $default  reduce using rule 20 (izraz)


State 50

   18 izraz: BROJ_T '.' BROJ_T . '.' BROJ_T

    '.'  shift, and go to state 71


State 51

   17 izraz: '(' izraz ')' .

    $default  reduce using rule 17 (izraz)


State 52

   27 lista: '[' lista_el ']' .

    $default  reduce using rule 27 (lista)


State 53

   29 lista_el: lista_el ',' . izraz

    MAX_T     shift, and go to state 1
    MIN_T     shift, and go to state 2
    PROSEK_T  shift, and go to state 3
    ID_T      shift, and go to state 22
    IDL_T     shift, and go to state 23
    BROJ_T    shift, and go to state 7
    '('       shift, and go to state 8
    '['       shift, and go to state 9

    izraz  go to state 72
    lista  go to state 25


State 54

    1 program: program naredba '\n' .

    $default  reduce using rule 1 (program)


State 55

    5 naredba: izraz LT_T izraz .
   15 izraz: izraz . '+' izraz
   16      | izraz . '-' izraz
   21      | izraz . '*' BROJ_T
   22      | izraz . '/' BROJ_T

    '+'  shift, and go to state 37
    '-'  shift, and go to state 38
    '*'  shift, and go to state 39
    '/'  shift, and go to state 40

    $default  reduce using rule 5 (naredba)


State 56

    6 naredba: izraz GT_T izraz .
   15 izraz: izraz . '+' izraz
   16      | izraz . '-' izraz
   21      | izraz . '*' BROJ_T
   22      | izraz . '/' BROJ_T

    '+'  shift, and go to state 37
    '-'  shift, and go to state 38
    '*'  shift, and go to state 39
    '/'  shift, and go to state 40

    $default  reduce using rule 6 (naredba)


State 57

    7 naredba: izraz LTE_T izraz .
   15 izraz: izraz . '+' izraz
   16      | izraz . '-' izraz
   21      | izraz . '*' BROJ_T
   22      | izraz . '/' BROJ_T

    '+'  shift, and go to state 37
    '-'  shift, and go to state 38
    '*'  shift, and go to state 39
    '/'  shift, and go to state 40

    $default  reduce using rule 7 (naredba)


State 58

    8 naredba: izraz GTE_T izraz .
   15 izraz: izraz . '+' izraz
   16      | izraz . '-' izraz
   21      | izraz . '*' BROJ_T
   22      | izraz . '/' BROJ_T

    '+'  shift, and go to state 37
    '-'  shift, and go to state 38
    '*'  shift, and go to state 39
    '/'  shift, and go to state 40

    $default  reduce using rule 8 (naredba)


State 59

    9 naredba: izraz EQ_T izraz .
   15 izraz: izraz . '+' izraz
   16      | izraz . '-' izraz
   21      | izraz . '*' BROJ_T
   22      | izraz . '/' BROJ_T

    '+'  shift, and go to state 37
    '-'  shift, and go to state 38
    '*'  shift, and go to state 39
    '/'  shift, and go to state 40

    $default  reduce using rule 9 (naredba)


State 60

   10 naredba: izraz NEQ_T izraz .
   15 izraz: izraz . '+' izraz
   16      | izraz . '-' izraz
   21      | izraz . '*' BROJ_T
   22      | izraz . '/' BROJ_T

    '+'  shift, and go to state 37
    '-'  shift, and go to state 38
    '*'  shift, and go to state 39
    '/'  shift, and go to state 40

    $default  reduce using rule 10 (naredba)


State 61

   15 izraz: izraz . '+' izraz
   15      | izraz '+' izraz .
   16      | izraz . '-' izraz
   21      | izraz . '*' BROJ_T
   22      | izraz . '/' BROJ_T

    '*'  shift, and go to state 39
    '/'  shift, and go to state 40

    $default  reduce using rule 15 (izraz)


State 62

   15 izraz: izraz . '+' izraz
   16      | izraz . '-' izraz
   16      | izraz '-' izraz .
   21      | izraz . '*' BROJ_T
   22      | izraz . '/' BROJ_T

    '*'  shift, and go to state 39
    '/'  shift, and go to state 40

    $default  reduce using rule 16 (izraz)


State 63

   21 izraz: izraz '*' BROJ_T .

    $default  reduce using rule 21 (izraz)


State 64

   22 izraz: izraz '/' BROJ_T .

    $default  reduce using rule 22 (izraz)


State 65

   26 izraz: lista '[' BROJ_T . ']'

    ']'  shift, and go to state 73


State 66

   24 izraz: MAX_T '(' lista ')' .

    $default  reduce using rule 24 (izraz)


State 67

   23 izraz: MIN_T '(' lista ')' .

    $default  reduce using rule 23 (izraz)


State 68

   25 izraz: PROSEK_T '(' lista ')' .

    $default  reduce using rule 25 (izraz)


State 69

   13 naredba: RAD_T '(' izraz ')' .

    $default  reduce using rule 13 (naredba)


State 70

   14 naredba: RAD_T '(' lista ')' .

    $default  reduce using rule 14 (naredba)


State 71

   18 izraz: BROJ_T '.' BROJ_T '.' . BROJ_T

    BROJ_T  shift, and go to state 74


State 72

   15 izraz: izraz . '+' izraz
   16      | izraz . '-' izraz
   21      | izraz . '*' BROJ_T
   22      | izraz . '/' BROJ_T
   29 lista_el: lista_el ',' izraz .

    '+'  shift, and go to state 37
    '-'  shift, and go to state 38
    '*'  shift, and go to state 39
    '/'  shift, and go to state 40

    $default  reduce using rule 29 (lista_el)


State 73

   26 izraz: lista '[' BROJ_T ']' .

    $default  reduce using rule 26 (izraz)


State 74

   18 izraz: BROJ_T '.' BROJ_T '.' BROJ_T .

    $default  reduce using rule 18 (izraz)
